Z-index fix for home section. W/o a high z-index, the section cannot be edited in squarespace.

--- a/styles/index.less
+++ b/styles/index.less
@@ -66,7 +66,7 @@ body {
 	.page-content {
 		position: absolute;
 		top: 111px;
-		z-index: 1;
+		z-index: 1000; // must be high or editing in squarespace is impossible
 		border: 0px;
 	}
 
